--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
     
     <div id="header">
-        <h1>Akshay Saini</h1>
+        <h1>Sarvesh Gupta</h1>
         <!-- <h1>Hello World!</h1> -->
     </div>
     
     <h1>Hello top of root</h1>
     <div id="root">
-        <h1>Akshay Saini</h1>
+        <h1>Sarvesh Gupta</h1>
         <!-- <h1>Hello World!</h1> -->
     </div>
     <h1>Hello below of root</h1>
