--- a/index.html
+++ b/index.html
@@ -2,32 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./index.css">
     <title>Namaste React</title>
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    
-    <div id="header">
-        <h1>Sarvesh Gupta</h1>
-        <!-- <h1>Hello World!</h1> -->
+    <div id = "root" class="root">
+        <h1>Not Rendered</h1>
     </div>
     
-    <h1>Hello top of root</h1>
-    <div id="root">
-        <h1>Sarvesh Gupta</h1>
-        <!-- <h1>Hello World!</h1> -->
-    </div>
-    <h1>Hello below of root</h1>
-    <!-- <script>
-        const heading = document.createElement('h1');
-        heading.innerHTML = "Hello World from Javascript!";
-        const root = document.getElementById("root");
-        root.appendChild(heading);
-    </script>     -->
-   
-    <!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script> -->
-    <script type="module" src="./app.js"></script>
-</body>
-</html>
+      <script type="module" src="./App.js"></script>
+
+ </body>
+</html> 
